handle problems at static initialization gracefully